Add static semantic-ui Add missing translation for anilist mediainformation finishedAiring Add missing !important to sticky menu

--- a/src/renderer/assets/locales/de.json
+++ b/src/renderer/assets/locales/de.json
@@ -141,6 +141,7 @@
       "currentlyAiring": "Ausstrahlung läuft",
       "notYetAired": "Noch nicht ausgestrahlt",
       "releasing": "Wird ausgestrahlt",
+      "finished": "Ausstrahlung beendet",
       "notYetReleased": "Ausstrahlung geplant",
       "cancelled": "Abgebrochen"
     },
