Add Rating to list and information modal Add buttons to information modal Add indicator for finished airing shows Hide episode increment button until its cell is hovered.

--- a/src/renderer/assets/locales/de.json
+++ b/src/renderer/assets/locales/de.json
@@ -138,7 +138,8 @@
       "deleteModalHeader": "Wirklich löschen?",
       "doYouReallyWantToDelete": "Möchtest du {title} wirklich von deiner Liste löschen?",
       "clear": "Auf 0 Sterne setzen",
-      "inputRequired": "Eingabe erforderlich!"
+      "inputRequired": "Eingabe erforderlich!",
+      "ratingError": "Bewertung unter- oder überschreitet die Grenzwerte!"
     },
     "actions": {
       "refreshMAL": "MAL aktualisieren",
